--- a/index.html
+++ b/index.html
@@ -960,7 +960,7 @@
                 <nav>
                    <ul id="menu">
                         <li><a href="#home">Home</a></li>
-                        <li><a href="#about">Ab out</a></li>
+                        <li><a href="#about">About Us</a></li>
                         <li><a href="#collection">Collection</a></li>
                         <li><a href="#shop">Shop</a></li>
                         <li><a href="bookings.html">Booking</a></li>
