--- a/index.html
+++ b/index.html
@@ -1015,8 +1015,10 @@
     </section>
     <!-- Footer -->
     <footer>
-        <p>All Rights Reserved Mett Apparels © 2025</p>
-        <p>&copy; 2025 Chef D. Creations. All rights reserved. | <a href="/privacy.html">Privacy Policy</a></p>
-    </footer>
+  <p>All Rights Reserved — Mett Apparels © 2025</p>
+  <p>&copy; 2025 Chef D. Creations. All rights reserved. | <a href="/privacy.html">Privacy Policy</a></p>
+</footer>
 </body>
+
+        
 </html>
