--- a/index.html
+++ b/index.html
@@ -1016,7 +1016,7 @@
     <!-- Footer -->
     <footer>
   <p>All Rights Reserved — Mett Apparels © 2025</p>
-  <p>&copy; 2025 Chef D. Creations. All rights reserved. | <a href="/privacy.html">Privacy Policy</a></p>
+  <p>&copy; 2025 Moselyn Junius. Creations. All rights reserved. | <a href="/privacy.html">Privacy Policy</a></p>
 </footer>
 </body>
 
