--- a/index.html
+++ b/index.html
@@ -1014,9 +1014,9 @@
         </div>
     </section>
     <!-- Footer -->
-    <footer>
-  <p>All Rights Reserved — Mett Apparels © 2025</p>
-  <p>&copy; 2025 Moselyn Junius. Creations. All rights reserved.| <a href="privacy.html">Privacy Policy</a>
-</footer>
+     <footer>
+           <p>All Rights Reserved — Mett Apparels © 2025</p>
+           <p>&copy; 2025 Moselyn Junius. Creations. All rights reserved. | <a href="privacy.html">Privacy Policy</a></p>
+       </footer>
 </body>     
 </html>
