--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Privacy Policy | Chef D. Creations</title>
+  <title>Privacy Policy | Mett Appearels</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -32,7 +32,7 @@
   <p><strong>Effective Date:</strong> May 20, 2025</p>
 
   <h2>1. Introduction</h2>
-  <p>At <strong>Chef D. Creations</strong>, we deeply value your privacy. This Privacy Policy outlines how we collect, use, store, and protect your personal data. By accessing or using our website, products, or services, you agree to the terms outlined in this policy.</p>
+  <p>At <strong>Moselyn Juinus Creations</strong>, we deeply value your privacy. This Privacy Policy outlines how we collect, use, store, and protect your personal data. By accessing or using our website, products, or services, you agree to the terms outlined in this policy.</p>
 
   <h2>2. What Information We Collect</h2>
   <h3>a. Personal Information</h3>
