--- a/index.html
+++ b/index.html
@@ -829,16 +829,14 @@
             <div class="announcement">🛍️ Use Code "METT10" for 10% Off Your First Order!</div>
         </div>
     </div>
-    <!-- Header -->
-    <header>
-        <div class="container">
-            <div class="header-content">
-                <div class="logo">
-                    <a href="#">METT APPARELS</a>
-                </div>
-               <header>
+<!-- Header -->
+<header>
   <div class="container">
-    <div class="nav-wrapper">
+    <div class="header-content">
+      <div class="logo">
+        <a href="#">METT APPARELS</a>
+      </div>
+
       <nav>
         <button class="hamburger">☰</button>
 
@@ -854,18 +852,25 @@
       </nav>
     </div>
   </div>
-
-  <!-- JavaScript for menu toggle -->
-  <script>
-    document.addEventListener('DOMContentLoaded', function() {
-      const hamburger = document.querySelector('.hamburger');
-      const menu = document.getElementById('menu');
-      hamburger.addEventListener('click', function() {
-        menu.classList.toggle('show'); // This must match your CSS
-      });
-    });
-  </script>
 </header>
+
+<!-- JavaScript for menu toggle -->
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+    const hamburger = document.querySelector('.hamburger');
+    const menu = document.getElementById('menu');
+    hamburger.addEventListener('click', function () {
+      menu.classList.toggle('show'); // This must match your CSS
+    });
+  });
+</script>
+
+<!-- Hero Section -->
+<section class="hero" id="home">
+  <div class="container">
+    <div class="hero-content">
+      <h1>Exquisite Designer
+
 
     <!-- Hero Section -->
     <section class="hero" id="home">
