--- a/index.html
+++ b/index.html
@@ -829,49 +829,38 @@
             <div class="announcement">🛍️ Use Code "METT10" for 10% Off Your First Order!</div>
         </div>
     </div>
-<!-- Header -->
-<header>
-  <div class="container">
-    <div class="header-content">
-      <div class="logo">
-        <a href="#">METT APPARELS</a>
-      </div>
-
-      <nav>
-        <button class="hamburger">☰</button>
-
-        <!-- Navigation menu -->
-        <ul id="menu">
-          <li><a href="#home">Home</a></li>
-          <li><a href="#about">About Us</a></li>
-          <li><a href="#collection">Collection</a></li>
-          <li><a href="#shop">Shop</a></li>
-          <li><a href="bookings.html">Booking</a></li>
-          <li><a href="cart-display.html">🛒 Cart <span id="cart-count">0</span></a></li>
-        </ul>
-      </nav>
-    </div>
-  </div>
-</header>
-
-<!-- JavaScript for menu toggle -->
-<script>
-  document.addEventListener('DOMContentLoaded', function () {
-    const hamburger = document.querySelector('.hamburger');
-    const menu = document.getElementById('menu');
-    hamburger.addEventListener('click', function () {
-      menu.classList.toggle('show'); // This must match your CSS
-    });
-  });
-</script>
-
-<!-- Hero Section -->
-<section class="hero" id="home">
-  <div class="container">
-    <div class="hero-content">
-      <h1>Exquisite Designer
-
-
+    <!-- Header -->
+    <header>
+        <div class="container">
+            <div class="header-content">
+                <div class="logo">
+                    <a href="#">METT APPARELS</a>
+                </div>
+                <nav>
+                    <button class="hamburger">☰</button>
+                    <!-- Navigation menu -->
+                    <ul id="menu">
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#about">About Us</a></li>
+                        <li><a href="#collection">Collection</a></li>
+                        <li><a href="#shop">Shop</a></li>
+                        <li><a href="bookings.html">Booking</a></li>
+                        <li><a href="cart-display.html">🛒 Cart <span id="cart-count">0</span></a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <!-- JavaScript for menu toggle -->
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const hamburger = document.querySelector('.hamburger');
+            const menu = document.getElementById('menu');
+            hamburger.addEventListener('click', function () {
+                menu.classList.toggle('show'); // This must match your CSS
+            });
+        });
+    </script>
     <!-- Hero Section -->
     <section class="hero" id="home">
         <div class="container">
@@ -1036,9 +1025,9 @@
         </div>
     </section>
     <!-- Footer -->
-     <footer>
-           <p>All Rights Reserved — Mett Apparels © 2025</p>
-           <p>&copy; 2025 Moselyn Junius. Creations. All rights reserved. | <a href="privacy.html" style="color: blue;">Privacy Policy</a>
-       </footer>
-</body>     
+    <footer>
+        <p>All Rights Reserved — Mett Apparels © 2025</p>
+        <p>&copy; 2025 Moselyn Junius. Creations. All rights reserved. | <a href="privacy.html" style="color: blue;">Privacy Policy</a></p>
+    </footer>
+</body>
 </html>
