--- a/index.html
+++ b/index.html
@@ -865,7 +865,7 @@
         <div class="container">
             <div class="story-content">
                 <h2>Our Brand Story</h2>
-                <p>Founded in 2010, Mett Apparels was born from a passion for creating garments that combine exceptional quality with innovative design. Our philosophy centers on craftsmanship, sustainability, and timeless elegance.</p>
+                <p>Founded in 2010, MAISON was born from a passion for creating garments that combine exceptional quality with innovative design. Our philosophy centers on craftsmanship, sustainability, and timeless elegance.</p>
                 <p>Every piece in our collection is meticulously crafted using premium materials sourced from ethical suppliers. We work with skilled artisans who share our vision for excellence and attention to detail.</p>
                 <div class="mission-values">
                     <div class="value-item">
