--- a/index.html
+++ b/index.html
@@ -832,6 +832,7 @@
                         <li><a href="#collection">Collection</a></li>
                         <li><a href="#shop">Shop</a></li>
                         <li><a href="cart-display.html">🛒 Cart <span id="cart-count">0</span></a></li>
+                        <li><a href="bookings.html">Booking</a></li>
                     </ul>
                 </nav>
             </div>
