--- a/index.html
+++ b/index.html
@@ -760,10 +760,14 @@
     <!-- Sliding Announcement Bar -->
     <div class="announcement-bar">
         <div class="announcement-slider" id="announcementSlider">
-            <div class="announcement"> New Collection Dropping This Friday!</div>
+            <div class="announcement"> "Fashion is not something that exists in dresses only. Fashion is in the sky, in the street, fashion has to do with ideas, the way we live, what is happening." - Coco Chanel</div>
+            <div class="announcement"> New Collection Dropping This Friday! Use Code "METT10" for 10% Off Your First Order!</div>
+            <div class="announcement"> "Beauty begins the moment you decide to be yourself." - Coco Chanel</div>
             <div class="announcement"> Free Shipping on Orders Over $150!</div>
+            <div class="announcement"> "Fashion is architecture: it is a matter of proportions." - Coco Chanel</div>
             <div class="announcement"> Trending: METT Signature Blazers Selling Fast!</div>
-            <div class="announcement"> Use Code "METT10" for 10% Off Your First Order!</div>
+            <div class="announcement"> "Dress shabbily and they remember the dress; dress impeccably and they remember the woman." - Coco Chanel</div>
+            <div class="announcement"> Special Sale: Up to 30% Off Selected Items!</div>
         </div>
     </div>
 
@@ -832,7 +836,6 @@
                         <li><a href="#collection">Collection</a></li>
                         <li><a href="#shop">Shop</a></li>
                         <li><a href="cart-display.html">🛒 Cart <span id="cart-count">0</span></a></li>
-                        <li><a href="bookings.html">Booking</a></li>
                     </ul>
                 </nav>
             </div>
@@ -993,7 +996,7 @@
         <div class="container">
             <div class="story-content">
                 <h2>Our Brand Story</h2>
-                <p>Founded in 2010, MAISON was born from a passion for creating garments that combine exceptional quality with innovative design. Our philosophy centers on craftsmanship, sustainability, and timeless elegance.</p>
+                <p>Founded in 2010, Mett Apparels was born from a passion for creating garments that combine exceptional quality with innovative design. Our philosophy centers on craftsmanship, sustainability, and timeless elegance.</p>
                 <p>Every piece in our collection is meticulously crafted using premium materials sourced from ethical suppliers. We work with skilled artisans who share our vision for excellence and attention to detail.</p>
                 <div class="mission-values">
                     <div class="value-item">
@@ -1086,6 +1089,7 @@
                         <a href="#"><i class="fab fa-instagram"></i></a>
                         <a href="#"><i class="fab fa-facebook"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-tiktok"></i></a>
                     </div>
                 </div>
                 <div class="footer-column">
@@ -1095,7 +1099,7 @@
                         <li><a href="#about">About Us</a></li>
                         <li><a href="#collection">Collection</a></li>
                         <li><a href="#shop">Shop</a></li>
-                       <li><a href="bookings.html">Booking</a></li>
+                        <li><a href="bookings.html">Booking</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
@@ -1157,7 +1161,16 @@
 
         .social-links a {
             color: var(--secondary-color);
+            font-size: 20px;
             transition: var(--transition);
+            padding: 10px;
+            border-radius: 50%;
+            background-color: rgba(255, 255, 255, 0.1);
+        }
+
+        .social-links a:hover {
+            color: var(--accent-color);
+            background-color: rgba(255, 255, 255, 0.2);
         }
 
         .social-links a:hover {
