--- a/index.html
+++ b/index.html
@@ -833,6 +833,7 @@
                 <div class="logo">
                     <a href="#">METT APPARELS</a>
                 </div>
+                <button class="hamburger">☰</button>
                 <nav>
                     <ul id="menu">
                         <li><a href="#home">Home</a></li>
@@ -1087,8 +1088,6 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-column">
-                    <h3>Mett Apparels</h3>
-                    <p>© 2025 Moselyn Junius. Creations. All rights reserved.</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-instagram"></i></a>
                         <a href="#"><i class="fab fa-facebook"></i></a>
@@ -1104,6 +1103,7 @@
                         <li><a href="#collection">Collection</a></li>
                         <li><a href="#shop">Shop</a></li>
                         <li><a href="bookings.html">Booking</a></li>
+                        <li><a href="blog.html">Blog</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
