--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@
         <div class="announcement-slider" id="announcementSlider">
             <div class="announcement"> "Fashion is not something that exists in dresses only. Fashion is in the sky, in the street, fashion has to do with ideas, the way we live, what is happening." - Coco Chanel</div>
             <div class="announcement"> New Collection Dropping This Friday! Use Code "METT10" for 10% Off Your First Order!</div>
-            <div class="announcement"> "Beauty begins the moment you decide to be yourself." - Coco Chanel</div>
+            <div class="announcement"> "Beauty begins the moment you decide to be yourself." - Moselyn Junius</div>
             <div class="announcement"> Free Shipping on Orders Over $150!</div>
             <div class="announcement"> "Fashion is architecture: it is a matter of proportions." - Coco Chanel</div>
             <div class="announcement"> Trending: METT Signature Blazers Selling Fast!</div>
